[package]
name = "rs-counter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "sqlite", "time" ] }
dotenv = "0.15.0"
time = { version = "0.3.31", features = ["serde-human-readable"] }
anyhow = "1.0.98"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.21.3"
tower = { version = "0.5.1", features = ["full"] }